WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118654
Calling Notification.requestPermission() without a callback crashes
https://bugs.webkit.org/show_bug.cgi?id=118654
Summary
Calling Notification.requestPermission() without a callback crashes
Jon Lee
Reported
2013-07-14 01:22:12 PDT
The most recent version of the web notification spec makes the callback optional. <
rdar://problem/14293352
>
Attachments
Patch
(9.01 KB, patch)
2013-07-15 00:48 PDT
,
Jon Lee
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2013-07-15 00:48:57 PDT
Created
attachment 206643
[details]
Patch
Jon Lee
Comment 2
2013-07-15 10:15:44 PDT
Committed
r152642
: <
http://trac.webkit.org/changeset/152642
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug