Source/WebKit/mac: [WK2] Calling Notification.requestPermission() without a callback crashes https://bugs.webkit.org/show_bug.cgi?id=118654 <rdar://problem/14293352>

Reviewed by Alexey Proskuryakov.

* WebCoreSupport/WebNotificationClient.mm:
(-[WebNotificationPolicyListener initWithCallback:]): The callback can be NULL, so remove the ASSERT.
(-[WebNotificationPolicyListener allow]): Check for the callback before asking it to handle the event.
(-[WebNotificationPolicyListener deny]): Ditto.

Source/WebKit2: Calling Notification.requestPermission() without a callback crashes
https://bugs.webkit.org/show_bug.cgi?id=118654
<rdar://problem/14293352>

Reviewed by Alexey Proskuryakov.

When requestPermission() is called, we short-circuit if we know the permission was already set.
The callback handler gets invoked. But now that callbacks are optional, we need to check to make
sure a callback was provided.

* WebProcess/Notifications/NotificationPermissionRequestManager.cpp:
(WebKit::NotificationPermissionRequestManager::startRequest): Check for the callback.

LayoutTests: [WK2] Calling Notification.requestPermission() without a callback crashes
https://bugs.webkit.org/show_bug.cgi?id=118654
<rdar://problem/14293352>

Reviewed by Alexey Proskuryakov.

* http/tests/notifications/notification-request-permission-expected.txt:
* http/tests/notifications/notification-request-permission.html: Add additional subtests that check
that the call succeeds even after granting or denying permission.

* http/tests/notifications/notification-request-permission-no-callback-expected.txt: Added.
* http/tests/notifications/notification-request-permission-no-callback.html: Added. Similar test to
notification-request-permission, without the callback function.

Canonical link: https://commits.webkit.org/136571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152642 268f45cc-cd09-0410-ab3c-d52691b4dbfc