Source/WebKit2/WebProcess/Notifications/NotificationPermissionRequestManager.cpp
@@ -70,7 +70,8 @@ void NotificationPermissionRequestManager::startRequest(SecurityOrigin* origin, 
 {
     NotificationClient::Permission permission = permissionLevel(origin);
     if (permission != NotificationClient::PermissionNotAllowed) {
-        callback->handleEvent(Notification::permissionString(permission));
+        if (callback)
+            callback->handleEvent(Notification::permissionString(permission));
         return;
     }
 
